[workspace]
members = [
    "crates/zr-core",
    "crates/zr-cli",
    "crates/zr-review",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.1", features = ["json", "query"] }
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
include_dir = "0.7.4"
globwalk = "0.9"
loguna = { git = "https://github.com/Technulgy-LGNU/loguna" }
prost = "0.13.5"
rand = "0.10.0"
rand_distr = "0.6.0"
rkyv = { version = "0.8.12", features = ["std", "alloc", "bytecheck"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tch = "0.24.0"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
zstd = "0.13.3"
