[package]
name = "zr-review-api"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
zr-core = { path = "../zr-core" }

[[bin]]
name = "zr-review-api"
path = "src/main.rs"
